# rc0-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  nightly.yml  release.yml
docs/: api-coverage.md  rc0-cli-mission-plan.md
docs/superpowers/plans/: 2026-04-21-phase-1-readonly.md  2026-04-21-phase-2-mutations.md  2026-04-22-phase-3-rrsets.md
packaging/homebrew/: rc0.rb
scripts/: build-binary.sh  gen_api_coverage.py  release.sh  smoke-live.sh  update-openapi.sh
src/rc0/: __init__.py  __main__.py  app.py  app_state.py  auth.py  config.py  confirm.py
src/rc0/api/: __init__.py  acme.py  acme_write.py  dnssec_write.py  messages.py  messages_write.py  reports.py  rrsets.py  rrsets_write.py  settings.py  settings_write.py  stats.py  tsig.py  tsig_write.py  zones.py  zones_write.py
src/rc0/client/: __init__.py  dry_run.py  errors.py  http.py  mutations.py  pagination.py
src/rc0/commands/: _deprecated.py  _helpers.py  acme.py  auth.py  config.py  dnssec.py  help.py  introspect.py  messages.py  record.py  report.py  settings.py  skill.py  stats.py  tsig.py  zone.py
src/rc0/models/: __init__.py  common.py  messages.py  reports.py  rrset.py  rrset_write.py  settings.py  stats.py  tsig.py  tsig_write.py  zone.py  zone_write.py
src/rc0/output/: __init__.py  _format.py  bind.py  csv_tsv.py  json_out.py  plain.py  table.py  yaml_out.py
src/rc0/rrsets/: __init__.py  parse.py
src/rc0/skill/: SKILL.md  __init__.py
src/rc0/topics/: acme-workflow.md  agents.md  authentication.md  dnssec-workflow.md  dry-run.md  exit-codes.md  output-formats.md  pagination.md  profiles-and-config.md  rrset-format.md
src/rc0/validation/: __init__.py  rrsets.py
tests/: conftest.py
tests/contract/: _expected_v2_gets.py  test_openapi_coverage.py
tests/fixtures/: openapi.json
tests/integration/: test_acme_commands.py  test_cli_smoke.py  test_dnssec_commands.py  test_introspect.py  test_messages_commands.py  test_messages_write_commands.py  test_record_commands.py  test_record_write_commands.py  test_report_commands.py  test_settings_commands.py  test_settings_write_commands.py  test_stats_commands.py  test_tsig_commands.py  test_tsig_write_commands.py  test_zone_commands.py  test_zone_write_commands.py
tests/unit/: test_argv_hoist.py  test_auth.py  test_bind_output.py  test_cli_skill.py  test_config.py  test_confirm.py  test_deprecated_helper.py  test_dnssec_write_api.py  test_dry_run.py  test_dry_run_parity.py  test_errors.py  test_http.py  test_models.py  test_mutation_executor.py  test_output.py  test_pagination.py  test_rrset_models.py  test_rrset_parse_file.py  test_rrset_parse_flags.py  test_rrset_parse_zonefile.py  test_rrset_validate.py  test_rrsets_write_api.py  test_usage_hint.py  test_zone_write_api.py
